#6521 closed bug (fixed)
Page fault in recent gcc4-hyrbrid images on boot with intel wifi 2200
Reported by: | kallisti5 | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Wireless | Version: | R1/Development |
Keywords: | kdl setwep wifi wireless | Cc: | andrewbachmann, luroh |
Blocked By: | Blocking: | ||
Platform: | All |
Attachments (2)
Change History (15)
by , 14 years ago
Attachment: | IMG_20100828_175641.jpg added |
---|
comment:2 by , 14 years ago
I ripped out the iprowifi drivers from the boot disk and tried again, the KDL no longer occurs but the desktop never loads... I get a desktop, one icon, and things completely lock.
disabling ACPI has no effect.. odd.
Hardware used to be 100% working only a few revisions ago, this system is an HP nc6230 laptop
comment:3 by , 14 years ago
I'm pretty sure this is due to the changes in hrev38378. After doing a binary search, I determined KDL issues with Wifi I was having were due to that revision. My issue was a KDL caused by using setwep with a WEP key provided. It would run as expected if used as "setwep [device] [ssid]", but would KDL immediately if used as "setwep [device] [ssid] [wep_key]". Providing a valid or invalid WEP key didn't matter, as anything after the SSID would cause the KDL. I eventually just updated to hrev38595, but undid the changes done in hrev38378. The KDL went away, and things seemed to return to normal.
This happened for me with an Atheros chipset. I took pictures of the KDL, but may not be able to upload them until after Ohio LinuxFest this weekend. I may open a new ticket as well, seeing as kallisti5's symptoms are somewhat different.
comment:4 by , 14 years ago
Cc: | added |
---|---|
Keywords: | kdl setwep wifi wireless added |
Additional information from duplicate ticket:
I came to SHDH 40 and my wireless (intel 3945) was working in build hrev37267. I rebuilt and installed Haiku and the wireless failed to connect. I tried to do a "setwep" and I ended up in KDL.
Symptoms were also reproduced by ScottMC on his laptop. (Using build hrev38712) Although his wireless (broadcom 43xx) wasn't working before, at least it didn't KDL when running "setwep".
We can also confirm that setwep was not exhibiting this behavior (it did not KDL) in a build around hrev38300 or so. (ScottMC has the exact build number) I can not confirm whether or not my wireless otherwise works in that build at this time.
comment:5 by , 14 years ago
Cc: | added |
---|
comment:6 by , 14 years ago
comment:7 by , 14 years ago
Also confirmed here with GCC2. Without hrev38378, setwep doesn't go to KDL (stacktrace ends with compat_ioctl -> wlan_ioctl -> NULL).
comment:8 by , 14 years ago
I made another build to test from hrev37793 and I was able to establish a wireless connection.
comment:9 by , 14 years ago
Verified I am still seeing the exact same KDL on hrev38734 on my nc6230.
I don't think this is the same issue you guys are seeing with setwep, this is on boot.
comment:10 by , 14 years ago
comment:11 by , 14 years ago
It does indeed look like the issue in my case is caused by hrev38378 as well.
============================================== Intel 2200 Wifi net_server KDL troubleshooting ============================================== r38414 GCC4 Hybrid -- KDL r38383 GCC4 Hybrid -- KDL r38360 GCC4 Hybrid -- boots ok r38343 GCC2 Hybrid -- boots ok
top of kdl