* Empty structures behave differently in C vs. C++ (while they are 0 byte sized   in C, they are 1 byte sized in C++). The empty knlist is what broke the WLAN   stuff in various ways since I renamed ieee80211_haiku.c to cpp. * This fixes at least bug #6521.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38838 a95241bf-73f2-0310-859d-f6bbb57e9c96