src/libs/compat/freebsd_network/compat/sys/event.h
@@ -7,6 +7,7 @@
 
 
 struct knlist {
+	int	_dummy;
 };
 
 #endif
